# poc-chat-mcp-database

./: .env.example  .gitignore  README.md  mcp_client_cli.py  mcp_client_mistral_ai.py  mcp_server.py  pyproject.toml  requirements.txt  run_client.py
databases/: populate_db.sh
datasources/databases/: demo-database.db
src/_proof_of_concept/: mcp_demo_client_anthropic.py  mcp_demo_server.py
src/client/: app.py  mcp_client_cli.py  mcp_demo_client_anthropic.py
src/client/business/: llm_provider.py  mcp_chat.py
src/client/models/: chat_message.py  errors_model.py
src/client/services/: anthropic_client.py  sqlite_assistant.py  tool_executor.py
src/client/utils/: config.py  logger.py
src/server/: app.py  mcp_server_cli.py
src/server/data_sources/: abstract_base.py  sqlite.py
src/server/services/: __init__.py  abstract_mcp_instance.py  mcp_main_instance.py  mcp_sqlite_instance.py
